cabal-version:      3.4
name:               algo-design-in-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: working on the book Algorithm Design With Haskell by Gibbons and Bird

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Kaushik Chakraborty
maintainer:         git@kaushikc.org

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable algo-design-in-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Book.SymmetricList

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
